# dnn_benchmark

./: .gitattributes  .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/androidTest/java/ru/gordinmitya/dnnbenchmark/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/ImageNet/: pytorch_prediction.py
app/src/main/assets/ImageNet/Rhodesian ridgeback/: n02087394_9097.txt
app/src/main/assets/ImageNet/agama/: n01687978_379.txt
app/src/main/assets/ImageNet/cock/: n01514668_15842.txt  n01514668_16158.txt
app/src/main/assets/ImageNet/laptop/: 362687223_5ad3d377db.txt
app/src/main/assets/ImageNet/ostrich/: n01518878_17708.txt  n01518878_27837.txt
app/src/main/assets/ImageNet/tiger shark/: n01491361_12177.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/ru/gordinmitya/dnnbenchmark/: App.kt  DeviceInfo.kt  MainActivity.kt  Measurment.kt  ProgressLogger.kt  ResultsSender.kt  WorkerService.kt
app/src/main/java/ru/gordinmitya/dnnbenchmark/benchmark/: BenchmarkResult.kt  Benchmarker.kt  InferenceResult.kt  PrecisionResult.kt  ResultEvaluator.kt
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
app/src/test/java/ru/gordinmitya/dnnbenchmark/: ExampleUnitTest.kt
common/: build.gradle
common/src/main/: AndroidManifest.xml
common/src/main/java/ru/gordinmitya/common/: BenchmarkResult.kt  Benchmarker.kt  Configuration.kt  Constants.kt  DataOrder.kt  InferenceFramework.kt  InferenceResult.kt  InferenceType.kt  Model.kt  NativeHelper.kt  PrecisionResult.kt  ResultEvaluator.kt  Task.kt  TaskExecutor.kt  Timeit.kt
common/src/test/java/ru/gordinmitya/common/: BenchmarkerTest.kt  ConfigurationTest.kt
fastlane/: Appfile  Fastfile
gradle/wrapper/: gradle-wrapper.properties
mace/: build.gradle  consumer-rules.pro  proguard-rules.pro
mace/src/main/: AndroidManifest.xml
mace/src/main/assets/mace/: mobilenet_v2.data  mobilenet_v2.pb
mace/src/main/cpp/: CMakeLists.txt  mace.cc  mace.h
mace/src/main/java/ru/gordinmitya/mace/: ConvertedModel.kt  MACEClassifier.kt  MACEFramework.kt  MACEInferenceType.kt  MACENative.java  ModelInfoNative.java
mace/src/main/res/values/: strings.xml
mnn/: build.gradle
mnn/src/main/: AndroidManifest.xml
mnn/src/main/assets/: mobilenet_v2.mnn
mnn/src/main/assets/mnn/: deeplab_v3.mnn  mobilenet_v2.mnn
mnn/src/main/cpp/: CMakeLists.txt  mnnnetnative.cpp
mnn/src/main/java/ru/gordinmitya/mnn/: ConvertedModel.kt  Engine.kt  MNNClassifier.kt  MNNFramework.kt  MNNInferenceType.kt  MNNSegmentator.kt  NormalizeHelper.kt
mnn/src/main/res/values/: strings.xml
model_conversions/: README.md  ncnn.md  onnx+pytorch.py  opencv.md  tf.py  tflite.py
model_convertions/: MNN.md  onnx+pytorch.py  tf.py  tflite.py
ncnn/: build.gradle
ncnn/src/main/: AndroidManifest.xml
ncnn/src/main/assets/mobilenet_v2/: ncnn.param
ncnn/src/main/assets/ncnn/: mobilenet_v2-opt.param  mobilenet_v2.param
ncnn/src/main/cpp/: CMakeLists.txt  ncnnnative.cpp
ncnn/src/main/cpp/includes/ncnn/: platform.h
ncnn/src/main/java/ru/gordinmitya/ncnn/: ConvertedModel.kt  Engine.kt  NCNNClassifier.kt  NCNNFramework.kt  NCNNInfereceType.kt  NCNNNative.java
ncnn/src/main/res/values/: strings.xml
onnxruntime/: README.md  build.gradle
onnxruntime/src/main/: AndroidManifest.xml
onnxruntime/src/main/assets/: mobilenet_v2.onnx
onnxruntime/src/main/cpp/: CMakeLists.txt  onnxjni.cpp  onnxruntime_inference.cpp  onnxruntime_inference.h
onnxruntime/src/main/java/ru/gordinmitya/onnxruntime/: ConvertedModel.kt  ONNXClassifier.kt  ONNXFramework.kt  ONNXInfereceType.kt  ONNXNative.java
opencv/: build.gradle
opencv/src/main/: AndroidManifest.xml
opencv/src/main/assets/: .gitattributes
opencv/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java
opencv/src/main/java/org/opencv/osgi/: OpenCVNativeLoader.java
opencv/src/main/java/ru/gordinmitya/opencv/: ConvertedModel.kt  OpenCVClassifier.kt  OpenCVFramework.kt  OpenCVInfereceType.kt
pytorch/: build.gradle  consumer-rules.pro
pytorch/src/main/: AndroidManifest.xml
pytorch/src/main/assets/: mobilenet_v2.pt
pytorch/src/main/java/ru/gordinmitya/pytorch/: ConvertedModel.kt  PytorchClassifier.kt  PytorchFramework.kt  PytorchInfereceType.kt
pytorch/src/main/res/values/: strings.xml
snpe/: build.gradle  consumer-rules.pro
snpe/libs/: snpe-release.aar_HERE.md
snpe/src/main/: AndroidManifest.xml
snpe/src/main/assets/snpe/: mobilenet_v2.dlc
snpe/src/main/java/ru/gordinmitya/snpe/: ConvertedModel.kt  SNPEClassifier.kt  SNPEFramework.kt  SNPEInfereceType.kt  SNPEInferenceType.kt
snpe/src/main/res/values/: strings.xml
tf_mobile/: build.gradle
tf_mobile/src/main/: AndroidManifest.xml
tf_mobile/src/main/assets/: mobilenet_v2.pb
tf_mobile/src/main/java/ru/gordinmitya/tf_mobile/: ConvertedModel.kt  Engine.kt  TFMobileClassifier.kt  TFMobileFramework.kt  TFMobileInfereceType.kt
tf_mobile/src/main/res/values/: strings.xml
tflite/: build.gradle
tflite/src/main/: AndroidManifest.xml
tflite/src/main/assets/: mobilenet_v2.tflite
tflite/src/main/assets/tflite/: mobilenet_v2.tflite
tflite/src/main/java/ru/gordinmitya/tflite/: ConvertedModel.kt  Engine.kt  NormalizeHelper.kt  TFLiteClassifier.kt  TFLiteFramework.kt  TFLiteInferenceType.kt  TFLiteSegmentator.kt
tflite/src/main/res/values/: strings.xml
(+53 files in other folders)
